# homework_27

./: db.sqlite3  manage.py  pyproject.toml
ads/: models.py  views.py
ads/migrations/: 0001_initial.py
datasets/: converter_db.py
django_homework_27/: asgi.py  settings.py  urls.py  wsgi.py
